# cppli

./: .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  TODO
cmake/: install-config.cmake  install-rules.cmake  install.cmake  log.cmake  project_is_top_level.cmake  variables.cmake
example/: CMakeLists.txt  command_example.cpp  example1.cpp  general.cpp  help_example.cpp  usage1.cpp
include/cppli/: argument_container.hpp  command.hpp  cppli.hpp  debug_utils.hpp  help.hpp  multikey_map.hpp  option.hpp  terminal.hpp
src/: argparser.cpp  argparser.hpp  argument.cpp  argument.hpp  argument_container.hpp  cli.cpp  cli.hpp  cppli.cpp  lib.cpp  lib1.hpp  logging.hpp  main.cpp  option.cpp  option.hpp  parse.hpp  parse_internal.hpp
test/: CMakeLists.txt  arg_container_test.cpp  define_arguments_test.cpp  general_api_test.cpp  parse_test.cpp  test1.cpp
test/source/: cppli_test.cpp
test/src/: argparser_test.cpp  conversion_test.cpp
